7_deploy_without_downtime/7_2_readiness_liveness/liveness/deployment-liveness.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: liveness-deployment
  namespace: liveness-namespace
spec:
  replicas: 1
  selector:
    matchLabels:
      app: liveness-deployment
  template:
    metadata:
      labels:
        app: liveness-deployment
    spec:
      containers:
      - name: liveness-deployment
        # image: kubernetespractice/kubernetes-practice:delay-60
        # image: kubernetespractice/kubernetes-practice:delay-5
        image: nginx:latest
        imagePullPolicy: Always
        # startupProbe:
        #   httpGet:
        #     path: /healthz
        #     port: 80
        #   failureThreshold: 5
        #   periodSeconds: 10
        # livenessProbe:
        #   httpGet:
        #     path: /healthz
        #     port: 80
        #   failureThreshold: 3
        #   periodSeconds: 5
