7_deploy_without_downtime/7_2_readiness_liveness/liveness/service-liveness.yaml
apiVersion: v1
kind: Service
metadata:
  name: liveness-service
  namespace: liveness-namespace
  labels:
    app: liveness-deployment
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 80
    name: http
  selector:
    app: liveness-deployment
