7_deploy_without_downtime/7_2_readiness_liveness/liveness/ingress-liveness.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: liveness-ingress
  namespace: liveness-namespace
  annotations:
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: "true"
    # old certmanager integration
    certmanager.k8s.io/cluster-issuer: "letsencrypt-practice"
    # new certmanager integration
    cert-manager.io/cluster-issuer: "letsencrypt-practice"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: 100m
spec:
  tls:
    - hosts: 
      - liveness-test.mykubernetes.guru
      secretName: ssl-letsencrypt2
  rules:
  - host: 'liveness-test.mykubernetes.guru'
    http:
      paths:
      - path: /
        backend:
          serviceName: liveness-service
          servicePort: 80
